# dee

./: .gitignore  README.md  install.sh  main.py  pyproject.toml  setup.cfg  setup.py
.dee/: HEAD  remote_link  state.msgpack  token
src/: main.py
src/cli/: commands.py
src/core/: objects.py  storage.py
src/deevcs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/optmizations/: numba_utils.py
src/templates/: home.html  index.html  login_signup.html  post_login.html  repopage.html
