[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deevcs"
version = "0.1.0"
description = "Versioning tool made with love"
authors = [
    { name = "Wendrew Oliveira", email = "about.wendrew@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "msgpack>=1.1.0",
    "numba>=0.61.2",
    "numpy>=2.2.4",
]

[project.scripts]
dee = "cli.commands:cli"

[tool.setuptools.packages.find]
where = ["src"]
