[project]
name = "deescm"
version = "0.1.10"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django",
    "djangorestframework",
    "jinja2",
    "paramiko",
    "psycopg2-binary",
    "pygments",
    "python-decouple",
    "requests",
]
