[build-system]
    requires = ["setuptools>=61.0"]
    build-backend = "setuptools.build_meta"

[project]
    name = "deevcs"
    version = "0.1.14"
    description = "Versioning tool made with love"
    authors = [
        { name = "Wendrew Oliveira", email = "about.wendrew@gmail.com" }
    ]
    requires-python = ">=3.11"
    dependencies = [
        "click>=8.1.8",
        "ipython>=9.2.0",
        "msgpack>=1.1.0",
        "numba>=0.61.2",
        "numpy>=2.2.4",
        "psycopg2-binary",
        "paramiko",
        "requests"
    ]

[project.scripts]
    dee = "cli.commands:cli"
 
[tool.setuptools.packages.find]
    where = ["src"]